Rewrote encryption method and altered date handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["malet <malet@gmx.at>"]
 
 [dependencies]
 uuid  = "*"
-rustc-serialize = "*"
 sodiumoxide = "*"
+serde = "*"
+serde_json = "*"
+serde_macros = "*"
 
 [dependencies.chrono]
 version = "*"
