--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,8 @@ authors = ["malet <malet@gmx.at>"]
 [dependencies]
 uuid  = "0.1.18"
 sodiumoxide = "0.0.9"
-serde = "0.6.1"
-serde_json = "0.6.0"
-serde_macros = "0.6.1"
+rustc-serialize = "*"
 
 [dependencies.chrono]
 version = "0.2.17"
-features = ["serde"]
+features = ["rustc-serialize"]
